--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
         <div id="cart-calc">
           <p id="cart-amt">3</p>
-          <img class="cart" src="./images/icon-cart.svg" alt="cart">
+          <img id="cart" src="./images/icon-cart.svg" alt="cart">
         </div>
 
 
@@ -74,6 +74,9 @@
     <div id="cart-out">
       <p class="thick">Cart</p>
       <div class="line"></div>
+      <div id="output">
+        Your cart is empty
+      </div>
 
     </div>
 
