--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="right-nav">
 
         <div id="cart-calc">
-          <p id="cart-amt">3</p>
+          <p class="amount"  id="cart-amt">0</p>
           <img id="cart" src="./images/icon-cart.svg" alt="cart">
         </div>
 
@@ -127,7 +127,7 @@
 
           <div id="increment">
             <img id="minus" src="./images/icon-minus.svg" alt="">
-            <p id="amount">0</p>
+            <p class="amount">0</p>
             <img id="plus" src="./images/icon-plus.svg" alt="">
           </div>
 
